--- a/META.yml
+++ b/META.yml
@@ -9,23 +9,31 @@ resources:
   license: http://dev.perl.org/licenses/
 requires:
   Acme::PlayCode: 0
+  Audio::Beep: 0
   CPAN: 0
+  CSS::Minifier::XS: 0
   Crypt::Blowfish: 0
   Crypt::CBC: 0
   ExtUtils::InferConfig: 0.02
   ExtUtils::InstallPAR: 0.01
+  HTML::Lint: 0
+  HTML::Tidy: 0
+  JavaScript::Beautifie: 0.03
+  JavaScript::Minifier::XS: 0
   LWP::Simple: 0
   Module::Build: 0
+  Module::Install: 0
   PAR::Packer: 0
   Padre: 0.16
-  Path::Class::File: 0
   Perl::Critic: 0
   Perl::Tidy: 0
+  Syntax::Highlight::Engine::Kate: 0
   Test::More: 0
   Test::NeedsDisplay: 1.05
   WebService::Validator::CSS::W3C: 0
   WebService::Validator::HTML::W3C: 0
   Wx::Perl::Dialog: 0.02
+  XML::Tidy: 0
   XML::XPath: 0
   perl: 5.008
   pip: 0.13
@@ -34,8 +42,8 @@ build_requires:
 provides:
   Task::Padre::Plugin::Deps:
     file: lib/Task/Padre/Plugin/Deps.pm
-    version: 0.01
-generated_by: Module::Build version 0.280801
+    version: 0.02
+generated_by: Module::Build version 0.3
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
