--- a/META.yml
+++ b/META.yml
@@ -1,52 +1,45 @@
 ---
-name: Task-Padre-Plugin-Deps
-version: 0.04
+abstract: 'prereqs of Padre::Plugins'
 author:
-  - 'Gabor Szabo <szabgab@gmail.com>'
-abstract: prereqs of Padre::Plugins
+  - 'Gabor Szabo'
+build_requires:
+  Test::More: 0
+  Test::NeedsDisplay: 1.05
+distribution_type: module
+generated_by: 'Module::Install version 0.790'
 license: perl
-resources:
-  license: http://dev.perl.org/licenses/
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Task-Padre-Plugin-Deps
+no_index:
+  directory:
+    - inc
+    - t
 requires:
   Acme::PlayCode: 0
   Audio::Beep: 0
-  CPAN: 0
   CSS::Minifier::XS: 0
+  Capture::Tiny: 0.03
   Crypt::Blowfish: 0
   Crypt::CBC: 0
   ExtUtils::InferConfig: 0.02
   ExtUtils::InstallPAR: 0.01
   HTML::Lint: 0
   HTML::Tidy: 0
-  JavaScript::Beautifie: 0.03
+  JavaScript::Beautifier: 0.03
   JavaScript::Minifier::XS: 0
   LWP::Simple: 0
-  Module::Build: 0
-  Module::Install: 0
   PAR::Packer: 0
-  Padre: 0.16
+  Padre: 0.21
   Perl::Critic: 0
   Perl::Tidy: 0
-  Readonly: 1.03
   Syntax::Highlight::Engine::Kate: 0
-  Syntax::Highlight::Perl6: 0.0295
-  Test::More: 0
-  Test::NeedsDisplay: 1.05
-  URI: 1.37
   WebService::Validator::CSS::W3C: 0
   WebService::Validator::HTML::W3C: 0
-  Wx::Perl::Dialog: 0.02
   XML::Tidy: 0
   XML::XPath: 0
-  perl: 5.008
   pip: 0.13
-build_requires:
-  Test::More: 0
-provides:
-  Task::Padre::Plugin::Deps:
-    file: lib/Task/Padre/Plugin/Deps.pm
-    version: 0.04
-generated_by: Module::Build version 0.3
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.08
