--- a/META.yml
+++ b/META.yml
@@ -20,6 +20,7 @@ requires:
   Acme::PlayCode: 0
   Audio::Beep: 0
   CSS::Minifier::XS: 0
+  Capture::Tiny: 0.03
   Crypt::Blowfish: 0
   Crypt::CBC: 0
   ExtUtils::InferConfig: 0.02
@@ -34,6 +35,7 @@ requires:
   Perl::Critic: 0
   Perl::Tidy: 0
   Syntax::Highlight::Engine::Kate: 0
+  Text::Autoformat: 0
   WebService::Validator::CSS::W3C: 0
   WebService::Validator::HTML::W3C: 0
   XML::Tidy: 0
@@ -41,4 +43,4 @@ requires:
   pip: 0.13
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.09
+version: 0.10
