--- a/META.yml
+++ b/META.yml
@@ -18,6 +18,7 @@ no_index:
     - t
 requires:
   Acme::PlayCode: 0
+  App::Nopaste: 0
   Audio::Beep: 0
   CSS::Minifier::XS: 0
   Capture::Tiny: 0.03
@@ -40,7 +41,6 @@ requires:
   WebService::Validator::HTML::W3C: 0
   XML::Tidy: 0
   XML::XPath: 0
-  pip: 0.13
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.10
+version: 0.11
