--- a/META.yml
+++ b/META.yml
@@ -39,8 +39,10 @@ requires:
   Text::Autoformat: 0
   WebService::Validator::CSS::W3C: 0
   WebService::Validator::HTML::W3C: 0
+  Wx::Perl::DataWalker: 0.02
   XML::Tidy: 0
   XML::XPath: 0
+  YAML::XS: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.11
+version: 0.12
